Test Graph Loss with Plots

--- a/03.4_Test_graph_loss.ipynb
+++ b/03.4_Test_graph_loss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7353440c",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d9161220",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "86bcad58",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "82444cdd",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "043a1144",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "       [2., 1., 0., ..., 1., 2., 3.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "50d5eae4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb17512a580>"
+       "<matplotlib.image.AxesImage at 0x7f812d9a1a30>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "da4bf0d3",
    "metadata": {},
    "outputs": [
@@ -179,10 +179,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb1752912e0>"
+       "<matplotlib.image.AxesImage at 0x7f812dc1c910>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "626496a1",
    "metadata": {},
    "outputs": [
@@ -229,21 +229,41 @@
      "output_type": "stream",
      "text": [
       "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
-      "Before graph loss\n",
-      "After graph loss\n",
       "Finished iteration 0\n",
       "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
-      "Before graph loss\n",
-      "After graph loss\n",
       "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
-      "Before graph loss\n",
-      "After graph loss\n",
       "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
-      "Before graph loss\n",
-      "After graph loss\n",
       "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
-      "Before graph loss\n",
-      "After graph loss\n"
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n"
      ]
     },
     {
@@ -254,9 +274,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/Bayesian Project/BAY-STATS-Project-ABDPPS/samplers.py\u001b[0m in \u001b[0;36mMC_sample_Z\u001b[0;34m(Z, W, Theta, B, E, C, debug)\u001b[0m\n\u001b[1;32m     57\u001b[0m                     \u001b[0mRho\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRho\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRho\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m                     \u001b[0mz_hat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mRho\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m                     \u001b[0mE\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_hat\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mprod\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/Bayesian Project/BAY-STATS-Project-ABDPPS/samplers.py\u001b[0m in \u001b[0;36mMC_sample_Z\u001b[0;34m(Z, W, Theta, B, E, C, debug)\u001b[0m\n\u001b[1;32m     40\u001b[0m                         \u001b[0;32mfor\u001b[0m \u001b[0mb\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m                             \u001b[0;32mif\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m                                 \u001b[0mC_vk\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m                         \u001b[0;31m# Compute the upper limits of the topic probabilities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m                         \u001b[0md_part\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mE\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mTheta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -321,7 +339,7 @@
     "    permute = permutation_topics(B_true=simulated_data.B, B_sampled=B)\n",
     "    permutations.append(permute)\n",
     "    \n",
-    "    print(permute)\n",
+    "    #print(permute)\n",
     "    \n",
     "    # Step 3\n",
     "    #H = MC_sample_H(E, Sigma, K, H_current=H, burn_in=10)\n",
@@ -346,6 +364,35 @@
     "        #plt.matshow(G, cmap='Blues')\n",
     "        #plt.suptitle(\"Graph of iteration \" + str(iteration), x=0.5, y=1, ha='center')\n",
     "        #plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "013d683e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'B'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-40310b9c6031>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mB_True_Permuted\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mB_True\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mpermute\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpermutation_topics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB_true\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mB_True\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mB_sampled\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpermute\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'B'"
+     ]
+    }
+   ],
+   "source": [
+    "B_True = simulated_data.B.copy()\n",
+    "B_True_Permuted = B_True.copy()\n",
+    "\n",
+    "B_True_Permuted[0] = B_True[1].copy()\n",
+    "B_True_Permuted[1] = B_True[0].copy()\n",
+    "\n",
+    "permute = permutation_topics(B_true=B_True, B_sampled=B)\n",
+    "print(permute)"
    ]
   },
   {
