--- a/04_Main_Cycle_FINAL.ipynb
+++ b/04_Main_Cycle_FINAL.ipynb
@@ -536,6 +536,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "848850b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errorsZ = pd.Series(Zconv)\n",
+    "print(\"Z binder loss between iterations metrics\")\n",
+    "print(errorsZ.describe())\n",
+    "errorsZ.hist(bins=30)\n",
+    "plt.suptitle('Z binder loss between iterations histogram', x=0.5, y=1, ha='center')\n",
+    "plt.show()\n",
+    "\n",
+    "errorsZ.plot(title=\"Z convergence between iterations series\")  # See if we still have a caterpillar\n",
+    "plt.axvline(x=cut, color='red', linestyle='--')\n",
+    "plt.show()\n",
+    "\n",
+    "errorsZ[0:cut].plot(title=\"Z convergence between iterations: First iterations\")\n",
+    "plt.show()\n",
+    "\n",
+    "errorsZ[cut:].plot(title=\"Z convergence between iterations: Last iterations\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "7f75ee0b",
    "metadata": {},
